--- a/public/css/button.css
+++ b/public/css/button.css
@@ -9,7 +9,7 @@
     border-radius: 0.5rem;
     padding: 0.5rem 1rem;
     font-size: 1.2rem;
-    font-family: 'Rubik';
+    font-family: 'Verdana';
     cursor: pointer;
     text-decoration: none;
     text-align: center;
