--- a/views/formulario.ejs
+++ b/views/formulario.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-    <h2 class="page-header">Bem vindo</h2>
+    <h2 class="page-header">Bem vindo(a)</h2>
         <div class="inner-container">
                 <% if (locals.result  != null) { %> 
                     <%- include('./_result', { result }) %>
