--- a/views/formulario.ejs
+++ b/views/formulario.ejs
@@ -10,10 +10,15 @@
     <div class="container">
     <h2 class="page-header">Bem vindo(a)</h2>
         <div class="inner-container">
+                <% if (locals.errorMessage  != null) { %>
+                    <div class="error-message">
+                        <%= errorMessage %> 
+                    </div>
+                <% } %> 
                 <% if (locals.result  != null) { %> 
                     <%- include('./_result', { result }) %>
                     <% } else { %> 
-                    <%- include('./_form_fields') %>
+                    <%- include('./_form_fields', { inputs }) %>
                 <% } %> 
         </div>
     </div>
