--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,8 +6,10 @@
     font-size: 20px;
     
     --color-base-hue: 25;
-    --color-background-dark: hsl(var(--color-base-hue), 100%, 8%);
-    --color-background-light: hsl(var(--color-base-hue), 100%, 20%);
+    --color-danger-hue-offset: 180;
+    --color-danger-hue: calc(var(--color-base-hue) - var(--color-danger-hue-offset));
+    --color-background-dark: hsl(var(--color-base-hue), 100%, 15%);
+    --color-background-light: hsl(var(--color-base-hue), 100%, 25%);
     --color-text-light: hsl(var(--color-base-hue), 65%, 87%);
 
     color: var(--color-text-light);
@@ -30,4 +32,8 @@ body {
 .page-header {
     font-size: 2rem;
     font-weight: 500;
+}
+
+.error-message {
+    color: hsl(var(--color-danger-hue),100%,50%)
 }
